# dtcc-pyspade-native

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  README_FOR_NEW_REPO.md  REPOSITORY_SUMMARY.md  SETUP_NEW_REPO.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
cmake/: pyspade_native-config.cmake.in
cppspade/: CMakeLists.txt  Cargo.toml
cppspade/cmake/: BuildRust.cmake  DownloadBinary.cmake  SpadeHelpers.cmake
examples/complete-project/: CMakeLists.txt  README.md  pyproject.toml  test_example.py
examples/complete-project/src/cpp/: geometry_binding.cpp
examples/complete-project/src/example_pkg/: __init__.py
scripts/: build.sh  test.sh
src/pyspade_native/: __init__.py  __main__.py
tests/: test_import.py
